--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,3 +1,3 @@
 main:
     - { url: '/', text: 'Home' }
-    - { url: '/pinterest', text: 'Pinterest' }
+    - { url: '/instagram', text: 'Instagram' }
