--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,7 +1,7 @@
 # Site Settings
 title: 'RailsGirls Cali'
 description: 'Rails Girls llega a Cali por primera vez!. Participa de un taller gratuito donde aprenderás a desarrollar aplicaciones web con Ruby on Rails.'
-url: 'http://railsgirls-cali.github.io' # the base hostname & protocol for your site
+url: 'http://railsgirlscali.com' # the base hostname & protocol for your site
 footer_text: 'Rails Girls Cali 2016.'
 
 # Admin Settings
