add route for slack app and improve the MD file

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,4 +3,5 @@ main:
     - { url: '/instagram', text: 'Instagram' }
     - { url: '/forum', text: 'Foro' }
     - { url: '/tienda', text: 'Tienda' }
+    - { url: '/slack', text: 'Railslack' }
     - { url: '/location', text: '¿Cómo llegar?' }
