added registry page, updating gems and info

--- a/_config.yml
+++ b/_config.yml
@@ -46,9 +46,8 @@ quiet:    false
 defaults: []
 
 # Markdown Processors
-markdown: redcarpet
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+markdown: kramdown
+redcarpet: null
 highlighter: pygments
 permalink: pretty
 
