--- a/_data/global.yml
+++ b/_data/global.yml
@@ -2,9 +2,9 @@
 title: 'RailsGirls Cali'
 description: 'Aquí encontrarás las guías de nuestros talleres.'
 url: 'http://railsgirlscali.com' # the base hostname & protocol for your site
-footer_text: 'Rails Girls Cali 2018.'
-new_event_message: 'Inscríbete a Rails Girls Cali 2018 <a target="_blank" href="https://goo.gl/forms/ajWE7HOASH1tgkIq2">aquí</a>'
+footer_text: 'Rails Girls Cali 2019'
+new_event_message: 'Inscríbete a Rails Girls Cali 2019 <a target="_blank" href="http://bit.ly/2o26wvV">aquí</a>'
 
 # Admin Settings
-admin_name: 'Christophe Estanol'
+admin_name: 'Juan Roa'
 admin_email: 'hello@railsgirlscali.com'
