add instagram 5 tab

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,6 +1,7 @@
 main:
     - { url: '/', text: 'Home' }
-    - { url: '/instagram-r6', text: 'Instagram' }
+    - { url: '/instagram-r5', text: 'Instagram 5' }
+    - { url: '/instagram-r6', text: 'Instagram 6' }
     - { url: '/forum', text: 'Foro' }
     - { url: '/tienda', text: 'Tienda' }
     - { url: '/slack', text: 'Railslack' }
