--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -6,4 +6,4 @@ main:
     - { url: '/tienda', text: 'Tienda' }
     - { url: '/slack', text: 'Railslack' }
     - { url: '/location', text: '¿Cómo llegar?' }
-    - { url: '/registro', text: 'Regístrate' }
+    - { url: '/registro', text: 'Inscríbete' }
