--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ unpublished: false
 
 # Plugins
 whitelist: []
-gems:      [jekyll-paginate]
+plugins:      [jekyll-paginate]
 
 # Conversion
 markdown:    kramdown
