--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,10 +1,10 @@
 # Site Settings
-title: 'Rails Girls Cali'
-description: 'Aquí encontrarás las guías de nuestros talleres.'
-url: 'https://railsgirlscali.com' # the base hostname & protocol for your site
-footer_text: 'Rails Girls Cali 2025'
-new_event_message: 'Inscríbete a Rails Girls Cali 2025 <a target="_blank" href="https://forms.gle/qmABhrjA3nSGS8T18">aquí</a>'
+title: "Rails Girls Cali"
+description: "Aquí encontrarás las guías de nuestros talleres."
+url: "https://railsgirlscali.com" # the base hostname & protocol for your site
+footer_text: "Rails Girls Cali 2025"
+#new_event_message: 'Inscríbete a Rails Girls Cali 2025 <a target="_blank" href="https://forms.gle/qmABhrjA3nSGS8T18">aquí</a>'
 
 # Admin Settings
-admin_name: 'Juan Roa'
-admin_email: 'hello@railsgirlscali.com'
+admin_name: "Juan Roa"
+admin_email: "hello@railsgirlscali.com"
