mentors updated, converted html to md and fixed implementation for data using yaml

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,7 +1,7 @@
 main:
   - { url: "/registro", text: "Inscríbete" }
   - { url: "/speakers", text: "Speakers" }
-  - { url: "/coaches", text: "Mentoras/es" }
+  - { url: "/mentores", text: "Mentoras/es" }
   - { url: "/instagram-r7", text: "Instagram 7" }
   # - { url: '/forum', text: 'Foro' }
   # - { url: '/tienda', text: 'Tienda' }
