added code of conduct

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -21,5 +21,9 @@ main:
             url: "/politica-de-datos-mentores",
             text: "Política de Datos Mentores/as",
           },
+          {
+            url: "/codigo-de-conducta",
+            text: "Código de conducta",
+          },
         ],
     }
