--- a/_data/mentores.yml
+++ b/_data/mentores.yml
@@ -42,6 +42,10 @@
   image: /assets/images/coaches/pedro_rivera.jpeg
   role: Senior Python Developer
   company: Globant
+- name: Juan Felipe Díaz
+  image: /assets/images/coaches/juan_felipe.jpeg
+  role: Software engineer II
+  company: Recurly
 # - name: Victor Cortes
 #   image: /assets/images/coaches/victor.jpg
 #   role: Product Lead
