updated Karen's talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -2,16 +2,14 @@
   image: /assets/images/speakers/2025/karen.jpeg
   role: Desarrolladores
   experience: >
-    Somos soñadores que creemos que las cosas se hacen con el corazón o no se hacen. Hace más de cinco años nos reunimos para ensayar teatro y explorar cómo aplicar la tecnología en su desarrollo.
-    Tenemos grandes ambiciones: queremos crear nuestro propio sistema de luces potenciado por inteligencia artificial, entrenar modelos que hagan arte y combinar el ancestral arte de los títeres con la robótica.
-    De esos sueños, ya estamos haciendo realidad uno: hemos logrado entrenar un modelo para que actúe, convirtiéndose en un personaje más dentro de la obra Mujer Moderna.
-    Queremos ser disruptivos y revolucionar la forma en que se entregan y reciben las conferencias de tecnología. No buscamos solo decir que usamos IA o explicar para qué la usamos, sino mostrar cómo la aplicamos en un proyecto real, mientras nos divertimos muchísimo en el proceso.
+    Somos un grupo de soñadores que une el arte y la tecnología. Desde hace más de cinco años exploramos cómo aplicar la innovación al teatro. Nuestro objetivo es crear un sistema de luces con inteligencia artificial,
+    combinar títeres con robótica y entrenar modelos que actúen. Ya dimos el primer paso con Mujer Moderna, donde un modelo de IA interpreta un personaje.
+    Buscamos revolucionar la forma de presentar la tecnología, mostrándola en acción y disfrutando el proceso creativo.
   talk_title: >
     Monólogo de la Mujer Moderna
   talk_description: >
-    Una mujer que ha alcanzado la cúspide de su carrera se detiene a mirar dentro de sí: ¿cuánta libertad hemos conquistado realmente las mujeres en la era moderna? Entre la presión, el éxito y la exigencia de serlo todo, su voz comienza a llenarse de dudas.
-    Pero no está sola. Su asistente —una inteligencia artificial— también la cuestiona, y lo que parecía ser un monólogo se transforma en un diálogo entre dos mujeres modernas: una de carne y hueso, y otra hecha de datos y algoritmos.
-    La obra propone un encuentro entre arte y tecnología, donde cada función es distinta, porque el modelo de IA improvisa libremente, convirtiendo cada presentación en una experiencia única e irrepetible.
+    Una mujer en la cima de su carrera se pregunta cuánta libertad han logrado realmente las mujeres modernas. Su diálogo con una asistente de inteligencia artificial
+    transforma el monólogo en una conversación entre lo humano y lo digital. Mujer Moderna une arte y tecnología en una experiencia única, donde la IA improvisa y convierte cada función en algo irrepetible.
 
 - name: Isabella Quitana Vargas
   image: /assets/images/speakers/2025/isabella.jpeg
