Added Melissa Escobar as speaker

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -28,3 +28,21 @@
     En esta charla, hablaremos cómo un diseño inclusivo no es solo responsabilidad del diseñador, sino un reto en equipo.
     Aprenderás cambios de paradigma y estrategias prácticas para integrar la accesibilidad en tu flujo de trabajo actual y,
     lo más importante, cómo iniciar esta conversación crucial tanto con tu equipo como con tus clientes.
+
+- name: Melissa Escobar Gutiérrez
+  image: /assets/images/coaches/melissa.jpg
+  role: Ruby Developer
+  company: Globant
+  experience: >
+    Soy Melissa Escobar, Ingeniera de sistemas y computación de la Universidad Tecnológica de Pereira,
+    y he trabajado como desarrolladora Ruby los últimos 4 años. Apasionada por la tecnología,
+    las matemáticas, la música, los libros y el arte.
+    Además, soy co-líder de comunidades de tecnología como Pereira Tech Talks, jointDeveloper y GDG Pereira,
+    donde trabajo para inspirar y conectar a más personas con el mundo de la tecnología.
+  talk_title: >
+    Superpoderes para mentes curiosas: una introducción a Ruby y Rails.
+  talk_description: >
+    Más allá de las listas de chequeo, la accesibilidad es una deuda que tenemos con millones de personas usuarias.
+    En esta charla, hablaremos cómo un diseño inclusivo no es solo responsabilidad del diseñador, sino un reto en equipo.
+    Aprenderás cambios de paradigma y estrategias prácticas para integrar la accesibilidad en tu flujo de trabajo actual y,
+    lo más importante, cómo iniciar esta conversación crucial tanto con tu equipo como con tus clientes.
