Added Erika Ruiz as speaker

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -46,3 +46,22 @@
     En esta charla, hablaremos cómo un diseño inclusivo no es solo responsabilidad del diseñador, sino un reto en equipo.
     Aprenderás cambios de paradigma y estrategias prácticas para integrar la accesibilidad en tu flujo de trabajo actual y,
     lo más importante, cómo iniciar esta conversación crucial tanto con tu equipo como con tus clientes.
+
+- name: Érica Andrea Ruiz Tabarez
+  image: /assets/images/speakers/2025/erika.jpg
+  role: DevOps Engineer
+  company: Curatech sas
+  experience: >
+    Soy Erica Ruiz, Ingeniera de sistemas, Magister en Tecnologia Informática,
+    Co-autora del libro: "STEAM: nueva Autopista del Aprendizaje: Experiencias y propuestas en Argentina".
+    En el 2020 fui invitada a la SOFA Conferences(9th International Workshop on Soft Computing Applications) Rumania,
+    donde presenté la conferencia titulada “A proposal for Classification and Prediction Algorithms in STEAM Experiences”.
+    Durante 6 años hice parte de la comunidad Women Who Code Medellín - como directora, inspirando a mujeres
+    a ingresar al mundo de la tecnología.
+  talk_title: >
+    Descubre tu lugar en el mundo tech.
+  talk_description: >
+    Esta charla busca inspirar a más chicas a acercarse a la tecnología desde una mirada humana y real.
+    Porque la tecnología no es solo programar: es crear, comunicar, diseñar, analizar y liderar proyectos que transforman vidas.
+    El mundo tech es diverso y tiene espacio para todo tipo de talentos e intereses. Sin importar tu formación o experiencia,
+    hay un lugar para ti en la tecnología.
