--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -11,23 +11,24 @@
     Una mujer en la cima de su carrera se pregunta cuánta libertad han logrado realmente las mujeres modernas. Su diálogo con una asistente de inteligencia artificial
     transforma el monólogo en una conversación entre lo humano y lo digital. Mujer Moderna une arte y tecnología en una experiencia única, donde la IA improvisa y convierte cada función en algo irrepetible.
 
-- name: Isabella Quitana Vargas
-  image: /assets/images/speakers/2025/isabella.jpeg
-  role: Diseñadora Gráfica y Web UI
-  company: Freelancer en Jaffe Management y DauHerker
+- name: Érica Andrea Ruiz Tabarez
+  image: /assets/images/speakers/2025/erica.jpeg
+  role: DevOps Engineer
+  company: Curatech sas
   experience: >
-    Soy egresada de la Universidad del Valle y cuento con más de 10 años de experiencia en proyectos de
-    diseño gráfico y web, con una fuerte especialización en mercadeo digital. Como nómada digital y
-    trabajadora remota durante más de siete años, he podido combinar mi amor por la tecnología con la
-    realización de proyectos internacionales y personales. Actualmente, soy una participante activa en
-    diversas comunidades tecnológicas en la ciudad de Cali.
+    Soy Erica Ruiz, Ingeniera de sistemas, Magister en Tecnologia Informática,
+    Co-autora del libro: "STEAM: nueva Autopista del Aprendizaje: Experiencias y propuestas en Argentina".
+    En el 2020 fui invitada a la SOFA Conferences(9th International Workshop on Soft Computing Applications) Rumania,
+    donde presenté la conferencia titulada “A proposal for Classification and Prediction Algorithms in STEAM Experiences”.
+    Durante 6 años hice parte de la comunidad Women Who Code Medellín - como directora, inspirando a mujeres
+    a ingresar al mundo de la tecnología.
   talk_title: >
-    Accesibilidad: Un Reto en Equipo y una deuda con el mundo.
+    Descubre tu lugar en el mundo tech.
   talk_description: >
-    Más allá de las listas de chequeo, la accesibilidad es una deuda que tenemos con millones de personas usuarias.
-    En esta charla, hablaremos cómo un diseño inclusivo no es solo responsabilidad del diseñador, sino un reto en equipo.
-    Aprenderás cambios de paradigma y estrategias prácticas para integrar la accesibilidad en tu flujo de trabajo actual y,
-    lo más importante, cómo iniciar esta conversación crucial tanto con tu equipo como con tus clientes.
+    Esta charla busca inspirar a más chicas a acercarse a la tecnología desde una mirada humana y real.
+    Porque la tecnología no es solo programar: es crear, comunicar, diseñar, analizar y liderar proyectos que transforman vidas.
+    El mundo tech es diverso y tiene espacio para todo tipo de talentos e intereses. Sin importar tu formación o experiencia,
+    hay un lugar para ti en la tecnología.
 
 - name: Melissa Escobar Gutiérrez
   image: /assets/images/coaches/melissa.jpg
@@ -47,21 +48,35 @@
     Aprenderás cambios de paradigma y estrategias prácticas para integrar la accesibilidad en tu flujo de trabajo actual y,
     lo más importante, cómo iniciar esta conversación crucial tanto con tu equipo como con tus clientes.
 
-- name: Érica Andrea Ruiz Tabarez
-  image: /assets/images/speakers/2025/erika.jpg
-  role: DevOps Engineer
-  company: Curatech sas
+- name: Isabella Quitana Vargas
+  image: /assets/images/speakers/2025/isabella.jpeg
+  role: Diseñadora Gráfica y Web UI
+  company: Freelancer en Jaffe Management y DauHerker
   experience: >
-    Soy Erica Ruiz, Ingeniera de sistemas, Magister en Tecnologia Informática,
-    Co-autora del libro: "STEAM: nueva Autopista del Aprendizaje: Experiencias y propuestas en Argentina".
-    En el 2020 fui invitada a la SOFA Conferences(9th International Workshop on Soft Computing Applications) Rumania,
-    donde presenté la conferencia titulada “A proposal for Classification and Prediction Algorithms in STEAM Experiences”.
-    Durante 6 años hice parte de la comunidad Women Who Code Medellín - como directora, inspirando a mujeres
-    a ingresar al mundo de la tecnología.
+    Soy egresada de la Universidad del Valle y cuento con más de 10 años de experiencia en proyectos de
+    diseño gráfico y web, con una fuerte especialización en mercadeo digital. Como nómada digital y
+    trabajadora remota durante más de siete años, he podido combinar mi amor por la tecnología con la
+    realización de proyectos internacionales y personales. Actualmente, soy una participante activa en
+    diversas comunidades tecnológicas en la ciudad de Cali.
   talk_title: >
-    Descubre tu lugar en el mundo tech.
+    Accesibilidad: Un Reto en Equipo y una deuda con el mundo.
   talk_description: >
-    Esta charla busca inspirar a más chicas a acercarse a la tecnología desde una mirada humana y real.
-    Porque la tecnología no es solo programar: es crear, comunicar, diseñar, analizar y liderar proyectos que transforman vidas.
-    El mundo tech es diverso y tiene espacio para todo tipo de talentos e intereses. Sin importar tu formación o experiencia,
-    hay un lugar para ti en la tecnología.
+    Más allá de las listas de chequeo, la accesibilidad es una deuda que tenemos con millones de personas usuarias.
+    En esta charla, hablaremos cómo un diseño inclusivo no es solo responsabilidad del diseñador, sino un reto en equipo.
+    Aprenderás cambios de paradigma y estrategias prácticas para integrar la accesibilidad en tu flujo de trabajo actual y,
+    lo más importante, cómo iniciar esta conversación crucial tanto con tu equipo como con tus clientes.
+
+- name: Stephanie Navarrete
+  image: /assets/images/speakers/2025/stephanie.jpeg
+  role: Fundadora & Coach Contable Financiero
+  company: Banteng Consultores
+  experience: >
+    Profesional en Contaduría y Finanzas Internacionales, con trayectoria como consultora, jefe y analista en distintas
+    áreas contables. Actualmente integra las finanzas con el coaching y la PNL, desarrollando soluciones educativas y
+    tecnológicas que impulsan la sostenibilidad y transforman la cultura financiera de las MYPE.
+  talk_title: >
+    Origen Financiero. El punto donde propósito, mentalidad y números se encuentran.
+  talk_description: >
+    Cuando transformamos nuestra historia, el propósito se convierte en motor de innovación.
+    Esta charla revela cómo las finanzas reflejan nuestro origen y cómo, al comprender ese camino,
+    podemos transformarnos para impulsar nuestro propósito hacia nuevos escenarios, incluso los tecnológicos.
