Updated '/talks' url to use '/charlas' instead

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,6 +1,6 @@
 main:
   - { url: "/registro", text: "Inscríbete" }
-  - { url: "/talks", text: "Charlas" }
+  - { url: "/charlas", text: "Charlas" }
   - { url: "/mentores", text: "Mentoras/es" }
   - { url: "/sponsors", text: "Patrocinadores" }
   - { url: "/instagram-r7", text: "Instagram 7" }
