testing logo for SEO

--- a/_data/global.yml
+++ b/_data/global.yml
@@ -4,7 +4,7 @@ description: "Aquí encontrarás las guías de nuestros talleres."
 url: "https://railsgirlscali.com" # the base hostname & protocol for your site
 footer_text: "Rails Girls Cali 2025"
 # Default Social/SEO
-image: "/assets/images/logo-railsgirls-red.svg"
+image: "/assets/images/logo.png"
 twitter_username: "rgcalioficial"
 #new_event_message: 'Inscríbete a Rails Girls Cali 2025 <a target="_blank" href="https://forms.gle/qmABhrjA3nSGS8T18">aquí</a>'
 
