--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ detach:  false
 port:    4000
 host:    127.0.0.1
 baseurl: "" # does not include hostname
+url: "https://railsgirls-cali.github.io" #
 
 # Outputting
 permalink:     /:title.html
@@ -52,4 +53,4 @@ highlighter: pygments
 permalink: pretty
 
 
-include: ['_pages']
+include: ['_pages', '_sass']
