fixed sponsor links

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -9,13 +9,13 @@
   url: https://platzi.com/
 - name: Banteng
   image: /assets/images/sponsors/banteng.jpg
-  url: https://banteng.pro/
+  url: https://bantengconsultores.com/
 - name: Pluralang
   image: /assets/images/sponsors/pluralang.svg
   url: https://pluralang.com/
 - name: Abatech
   image: /assets/images/sponsors/Abatech.jpg
-  url: https://www.abatech.com.co/
+  url: https://www.linkedin.com/company/aba-tech/
 - name: Monoku
   image: /assets/images/sponsors/monoku.png
   url: https://monoku.com/
